tests/ui/attributes/repr-align-in-trait-issue-132391.rs
trait MyTrait {
    #[repr(align)] //~ ERROR malformed `repr` attribute input
    fn myfun();
}

pub fn main() {}
